--- a/public_html/menu.html
+++ b/public_html/menu.html
@@ -6,10 +6,10 @@
 		<title>Меню</title>
 	</head>
 	<body>
-		<img src="logo_myhouse.gif">
+		<a href="main.html" target="main"><img src="logo_myhouse.gif"></a>
 	<h4 id="blue">Категории проектов</h4>
 	<ol id="blue_2">
-		<li>Проекты таунхаусов и блокированных домов</li>
+		<li><a href="kategoria/townhouse/townhouse.html" target="main">Проекты таунхаусов и блокированных домов</a></li>
 		<li>Проекты домов на две семьи</li>
 		<li>Проекты узких домов</li>
 		<li>Проекты бань</li>
