--- a/public_html/main.html
+++ b/public_html/main.html
@@ -9,6 +9,12 @@
 		<h1>Каталог архитектурных проектов</h1>
 
 		<h2>Проекты для Вашего будущего дома</h2>
+		<hr size="4" width="85%" align="center" color="blue">
+		<center>
+			<img src="project.jpg" alt="Коттедж" >
+		</center>
+
+		<hr size="4" width="85%" align="center" color="blue">
 
 		<p>Каталог готовых архитектурных проектов коттеджей <b>myhouse.ru</b> явился результатом многолетней работы лучших российских специалистов в области архитектуры и строительства. 
 		<br />Это своего рода «Собрание сочинений» от современной загородной архитектуры, в котором каждый может найти что-то свое.</p>
@@ -16,6 +22,8 @@
 		<p>Проекты коттеджей из каталога нельзя называть типовыми, поскольку разрабатывались они в порядке индивидуального проектирования непосредственно под нужды будущих владельцев загородных домов. <i><u>Более 95% проектов</u></i> реализовано в строительстве. Большая часть проектов реализована неоднократно, как в Московской области, так и по всей территории Российской Федерации, в странах ближнего зарубежья.</p>
 
 		<p>Экономическая составляющая и вопросы престижа не менее важны при выборе проекта дома. Разброс проектных площадей - велик. В настоящее время это дома от 50 до 1300 м2 общей площади. Часть из них можно отнести к дачам, в то время, как другую, смело причислить к образцам великолепной дворцовой архитектуры. Разумеется, средние по размерам проекты представлены наиболее полно и отражают все тенденции в современном коттеджном строительстве.</p>
+
+		<hr size="4" width="85%" align="center" color="blue">
 
 		<h3>Проекты домов</h3>
 		<ol>
